Move UrlConnectionHttpClient features to decorators